--- a/A_dom/1_input.html
+++ b/A_dom/1_input.html
@@ -44,7 +44,7 @@
 
     <script>
         const PLAYER_SPEED = 200;
-        const player = document.querySelector('.player')
+        const player = document.querySelector('.player');
 
         // Directional input handling
         addEventListener('keydown', evt => {
