--- a/A_dom/2_game_loop.html
+++ b/A_dom/2_game_loop.html
@@ -44,9 +44,9 @@
 
     <script>
         const PLAYER_SPEED = 600;
-        const player = document.querySelector('.player')
+        const player = document.querySelector('.player');
 
-        const direction = { x: 0, y: 0 }
+        const direction = { x: 0, y: 0 };
 
         // Directional input handling
         addEventListener('keydown', evt => {
