--- a/A_dom/4_vectors.html
+++ b/A_dom/4_vectors.html
@@ -56,10 +56,10 @@
         const PLAYER_SPEED = 600;
         const TREASURE_COLLECT_RADIUS = 100;
 
-        const game = document.querySelector('.game')
-        const player = document.querySelector('.player')
+        const game = document.querySelector('.game');
+        const player = document.querySelector('.player');
 
-        const direction = { x: 0, y: 0 }
+        const direction = { x: 0, y: 0 };
 
         // Directional input handling
         addEventListener('keydown', evt => {
