--- a/A_dom/5_ui.html
+++ b/A_dom/5_ui.html
@@ -27,6 +27,7 @@
         .game > label {
             position: absolute;
             top: 35%;
+            left: 0;
             width: 100%;
             text-align: center;
             font-size: 20rem;
@@ -40,12 +41,15 @@
             position: absolute;
             top: 0;
             right: 0;
+            z-index: 100;
             text-align: right;
             display: flex;
-            padding: 1rem;
+            padding: 0.5rem 1.2rem;
             flex-direction: column;
             font-size: 3rem;
             font-weight: bold;
+            background: white;
+            border-bottom-left-radius: 48px;
         }
 
         .player {
@@ -85,12 +89,12 @@
         const PLAYER_SPEED = 600;
         const TREASURE_COLLECT_RADIUS = 100;
 
-        const game = document.querySelector('.game')
-        const player = document.querySelector('.player')
-        const uiSecsLeft = document.querySelector('#secs-left')
-        const uiPoints = document.querySelector('#points')
+        const game = document.querySelector('.game');
+        const player = document.querySelector('.player');
+        const uiSecsLeft = document.querySelector('#secs-left');
+        const uiPoints = document.querySelector('#points');
 
-        const direction = { x: 0, y: 0 }
+        const direction = { x: 0, y: 0 };
 
         // Directional input handling
         addEventListener('keydown', evt => {
