--- a/A_dom/2_game_loop.html
+++ b/A_dom/2_game_loop.html
@@ -50,16 +50,16 @@
 
         // Directional input handling
         addEventListener('keydown', evt => {
-            if (evt.key == 'w') direction.y = -1;
-            if (evt.key == 's') direction.y = 1;
-            if (evt.key == 'a') direction.x = -1;
-            if (evt.key == 'd') direction.x = 1;
+            if (evt.key === 'w') direction.y = -1;
+            if (evt.key === 's') direction.y = 1;
+            if (evt.key === 'a') direction.x = -1;
+            if (evt.key === 'd') direction.x = 1;
         })
         addEventListener('keyup', evt => {
-            if (evt.key == 'w' && direction.y === -1) direction.y = 0;
-            if (evt.key == 's' && direction.y === 1)  direction.y = 0;
-            if (evt.key == 'a' && direction.x === -1) direction.x = 0;
-            if (evt.key == 'd' && direction.x === 1)  direction.x = 0;
+            if (evt.key === 'w' && direction.y === -1) direction.y = 0;
+            if (evt.key === 's' && direction.y === 1)  direction.y = 0;
+            if (evt.key === 'a' && direction.x === -1) direction.x = 0;
+            if (evt.key === 'd' && direction.x === 1)  direction.x = 0;
         })
 
         // Per-frame update loop, with deltaTime
