--- a/A_dom/6_art_anim_audio.html
+++ b/A_dom/6_art_anim_audio.html
@@ -105,7 +105,7 @@
 
     <script>
         const PLAYER_SPEED = 600;
-        const TREASURE_COLLECT_RADIUS = 100;
+        const TREASURE_COLLECT_RADIUS = 150;
 
         const game = document.querySelector('.game');
         const player = document.querySelector('.player');
@@ -117,16 +117,16 @@
 
         // Directional input handling
         addEventListener('keydown', evt => {
-            if (evt.key == 'w') direction.y = -1;
-            if (evt.key == 's') direction.y = 1;
-            if (evt.key == 'a') direction.x = -1;
-            if (evt.key == 'd') direction.x = 1;
+            if (evt.key === 'w') direction.y = -1;
+            if (evt.key === 's') direction.y = 1;
+            if (evt.key === 'a') direction.x = -1;
+            if (evt.key === 'd') direction.x = 1;
         })
         addEventListener('keyup', evt => {
-            if (evt.key == 'w' && direction.y === -1) direction.y = 0;
-            if (evt.key == 's' && direction.y === 1)  direction.y = 0;
-            if (evt.key == 'a' && direction.x === -1) direction.x = 0;
-            if (evt.key == 'd' && direction.x === 1)  direction.x = 0;
+            if (evt.key === 'w' && direction.y === -1) direction.y = 0;
+            if (evt.key === 's' && direction.y === 1)  direction.y = 0;
+            if (evt.key === 'a' && direction.x === -1) direction.x = 0;
+            if (evt.key === 'd' && direction.x === 1)  direction.x = 0;
         })
 
         // Per-frame update loop, with deltaTime
@@ -148,10 +148,10 @@
             player.style.top = playerY + 'px';
 
             // Animation states
-            player.classList.toggle('moving', direction.x != 0 || direction.y != 0)
-            if (direction.x == -1) {
+            player.classList.toggle('moving', direction.x !== 0 || direction.y !== 0)
+            if (direction.x === -1) {
                 player.classList.add('left')
-            } else if (direction.x == 1) {
+            } else if (direction.x === 1) {
                 player.classList.remove('left')
             }
 
