--- a/B_canvas2d/3_camera.html
+++ b/B_canvas2d/3_camera.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="ui">
-        <label>Seconds remaining: <span id="secs-left">111</span></label>
+        <label>Seconds remaining: <span id="secs-left">11</span></label>
         <label>Treasure collected: <span id="points">0</span></label>
     </div>
     <div class="game">
@@ -68,7 +68,7 @@
     <script>
         const PLAYER_SPEED = 800;
         const PLAYER_ANIM_TIME_PER_INDEX = 0.1;
-        const TREASURE_COLLECT_RADIUS = 100;
+        const TREASURE_COLLECT_RADIUS = 150;
 
         const game = document.querySelector('.game');
         const uiSecsLeft = document.querySelector('#secs-left');
@@ -121,16 +121,16 @@
 
         // Directional input handling
         addEventListener('keydown', evt => {
-            if (evt.key == 'w') direction.y = -1;
-            if (evt.key == 's') direction.y = 1;
-            if (evt.key == 'a') direction.x = -1;
-            if (evt.key == 'd') direction.x = 1;
+            if (evt.key === 'w') direction.y = -1;
+            if (evt.key === 's') direction.y = 1;
+            if (evt.key === 'a') direction.x = -1;
+            if (evt.key === 'd') direction.x = 1;
         })
         addEventListener('keyup', evt => {
-            if (evt.key == 'w' && direction.y === -1) direction.y = 0;
-            if (evt.key == 's' && direction.y === 1)  direction.y = 0;
-            if (evt.key == 'a' && direction.x === -1) direction.x = 0;
-            if (evt.key == 'd' && direction.x === 1)  direction.x = 0;
+            if (evt.key === 'w' && direction.y === -1) direction.y = 0;
+            if (evt.key === 's' && direction.y === 1)  direction.y = 0;
+            if (evt.key === 'a' && direction.x === -1) direction.x = 0;
+            if (evt.key === 'd' && direction.x === 1)  direction.x = 0;
         })
 
         // Box vs Box collision, checks all 4 corners
@@ -161,20 +161,20 @@
 
             // Check collision before moving, each axis separately for smooth movement
             let moved = false;
-            if (direction.x != 0 && !colliders.find(c => boxBoxCollision(c, { ...player, x: newX }))) {
+            if (direction.x !== 0 && !colliders.find(c => boxBoxCollision(c, { ...player, x: newX }))) {
                 player.x = newX;
                 moved = true;
             }
-            if (direction.y != 0 && !colliders.find(c => boxBoxCollision(c, { ...player, y: newY }))) {
+            if (direction.y !== 0 && !colliders.find(c => boxBoxCollision(c, { ...player, y: newY }))) {
                 player.y = newY;
                 moved = true;
             }
 
             // Animation states
             player.moving = moved
-            if (direction.x == -1) {
+            if (direction.x === -1) {
                 player.left = true;
-            } else if (direction.x == 1) {
+            } else if (direction.x === 1) {
                 player.left = false;
             }
 
